# nucleus

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  README.md  project.toml  setup.py
benchmarks/: CMakeLists.txt
benchmarks/Allocators/: AllocatorBenchmarks.cpp
benchmarks/src/Allocators/: AllocatorBenchmarks.cpp
cmake/: Utils.cmake  gcc.cmake  gtest.cmake  msvc.cmake
include/nucleus/: AtExit.h  ByteOrder.h  Config.h  Debugger.h  FilePath.h  Files.h  Filter.h  Function.h  Hash.h  HighPerformanceTimer.h  HighResolutionTimer.h  Logging.h  Macros.h  MemoryDebug.h  Optional.h  Profiling.h  Ref.h  RefCounted.h  Signals.h  Singleton.h  SourceLocation.h  Types.h  byte_order.h  config.h  debugger.h  file_path.h  function.h  hash.h  high_resolution_timer.h  logging.h  macros.h  main_header.hpp  optional.h  optional.hpp  profiling.h  ref_counted.h  scoped_thread_local_ptr.h  source_location.h  task.h  type_id.h  (+1 more)
include/nucleus/Allocators/: Allocated.h  Allocator.h  DebugAllocator.h  DefaultAllocator.h  GlobalAllocator.h  LinearAllocator.h  TestAllocator.h
include/nucleus/Atomics/: AtomicRefCount.h  Atomics.h  AtomicsX86GCC.h  AtomicsX86MSVC.h
src/: AtExit.cpp  Debugger.cpp  FilePath.cpp  Files.cpp  HighPerformanceTimer.cpp  HighResolutionTimer.cpp  Logging.cpp  MemoryDebug.cpp  Profiling.cpp  RefCounted.cpp  debugger.cpp  file_path.cpp  high_resolution_timer.cpp  logging.cpp  profiling.cpp
src/Allocators/: Allocator.cpp  DebugAllocator.cpp  DefaultAllocator.cpp  GlobalAllocator.cpp  LinearAllocator.cpp
src/Callbacks/: CallbackDetail.cpp
src/Files/: FilePath.cpp
src/Memory/: Allocator.cpp  Memory.cpp  RefCounted.cpp
src/MessageLoop/: MessageLoop.cpp  MessagePump.cpp  MessagePumpDefault.cpp
src/Parser/: Parser.cpp  Tokenizer.cpp  XMLParser.cpp
src/Renderer/: Renderer.cpp
src/Streams/: ArrayInputStream.cpp  ConsoleOutputStream.cpp  DynamicBufferOutputStream.cpp  FileInputStream.cpp  FileInputStream_posix.cpp  FileInputStream_win.cpp  FileOutputStream.cpp  InputStream.cpp  MemoryInputStream.cpp  OutputStream.cpp  StringOutputStream.cpp  Utils.cpp  WrappedMemoryInputStream.cpp
src/Synchronization/: Lock.cpp
src/Text/: DynamicString.cpp  StringView.cpp  Utils.cpp
src/Utils/: Files.cpp
src/base/: CMakeLists.txt  config.h  logging.cpp  logging.h  logging_test.cpp  macros.h
src/base/files/: file_path.cpp  file_path.h  file_utils.h  file_utils_win.cpp
src/base/message_loop/: message_loop.cpp  message_loop.h  message_loop_tests.cpp
src/base/strings/: char_ptr.h  char_ptr_tests.cpp  char_ptr_traits_16.h  char_ptr_traits_32.h  char_ptr_traits_8.h  char_ptr_traits_a.h  char_ptr_traits_w.h  string_utf_conversion.cpp  string_utf_conversion.h  string_utils.cpp  string_utils.h  string_utils_tests.cpp
src/base/win/: windows_mxin.h
src/files/: file_path.cpp  file_utils_win.cpp  special_paths.cpp  special_paths_linux.cpp  special_paths_mac.cpp  special_paths_posix.cpp  special_paths_win.cpp
src/message_loop/: incoming_task_queue.cpp  message_loop.cpp  message_pump.cpp  message_pump_default.cpp
src/parser/: tokenizer.cpp  xml_parser.cpp
src/streams/: FileOutputStream.cpp  OutputStream.cpp  Utils.cpp  array_input_stream.cpp  console_output_stream.cpp  dynamic_buffer_output_stream.cpp  file_input_stream.cpp  file_input_stream_posix.cpp  file_input_stream_win.cpp  file_output_stream.cpp  input_stream.cpp  memory_input_stream.cpp  output_stream.cpp  string_output_stream.cpp  wrapped_memory_input_stream.cpp
src/strings/: string.cpp  string_utf_conversion.cpp  string_utils.cpp
src/synchronization/: Lock.cpp  lock.cpp  lock_win32.cpp
src/testing/: lifetime_tracker.cpp
src/text/: dynamic_string.cpp  string_view.cpp  utils.cpp
src/threading/: thread.cpp  thread_local.cpp
tests/: AtExitTests.cpp  CMakeLists.txt  FilePathTests.cpp  FunctionTests.cpp  HighPerformanceTimerTests.cpp  HighResolutionTimerTests.cpp  LoggingTests.cpp  OptionalTests.cpp  ProfilingTests.cpp  RefCountedTests.cpp  SignalsTests.cpp  SingletonTests.cpp  byte_order_tests.cpp  file_path_tests.cpp  function_tests.cpp  hash_tests.cpp  high_resolution_timer_tests.cpp  logging_test.cpp  logging_tests.cpp  optional_tests.cpp  profiling_tests.cpp  ref_counted_tests.cpp  thread_local_tests.cpp
tests/Allocators/: AllocatedTests.cpp  AllocatorTests.cpp  DebugAllocatorTests.cpp
tests/Atomics/: AtomicsTests.cpp
tests/Callbacks/: CallbackTests.cpp
tests/Containers/: ArrayTests.cpp  BitSetTests.cpp  DynamicArrayTests.cpp  GrowingArrayTests.cpp  HashMapTests.cpp  ObjectPoolTests.cpp  StaticArrayTests.cpp  hash_map_tests.cpp  hash_table_base_tests.cpp  hash_table_tests.cpp  stable_pool_tests.cpp
tests/Files/: FilePathTests.cpp
tests/Memory/: AllocatedTests.cpp  AllocatorTests.cpp  PtrTests.cpp  RefCountedTests.cpp  ScopedPtrTests.cpp  ScopedRefPtrTests.cpp
tests/MessageLoop/: MessageLoopTests.cpp
tests/Parser/: ParserTests.cpp  TokenizerTests.cpp  XMLParserTests.cpp  tokenizer_tests.cpp
tests/Streams/: ConsoleOutputStreamTests.cpp
tests/Text/: DynamicStringTests.cpp  StaticStringTests.cpp  StringPoolTests.cpp  StringTests.cpp  StringViewTests.cpp  UtilsTests.cpp
tests/Utils/: SignalsTests.cpp
tests/containers/: DynamicArrayTests.cpp  array_tests.cpp  bit_set_tests.cpp  dynamic_array_tests.cpp  hash_map_tests.cpp  hash_table_base_tests.cpp  hash_table_tests.cpp  stable_pool_tests.cpp  static_array_tests.cpp  vector_tests.cpp
tests/files/: file_path_tests.cpp  special_paths_tests.cpp
tests/memory/: scoped_ptr_tests.cpp  scoped_ref_ptr_tests.cpp
tests/message_loop/: message_loop_tests.cpp
tests/parser/: tokenizer_tests.cpp  xml_parser_tests.cpp
tests/streams/: console_output_stream_tests.cpp
tests/strings/: StringTests.cpp  char_ptr_tests.cpp  string_utils_tests.cpp
tests/text/: dynamic_string_tests.cpp  static_string_tests.cpp  string_pool_tests.cpp  string_view_tests.cpp  utils_tests.cpp
tests/threading/: scoped_thread_local_ptr_tests.cpp  thread_local_tests.cpp  thread_tests.cpp
tests/utils/: observer_list_tests.cpp  signals_tests.cpp
(+154 files in other folders)
